--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,6 +9,8 @@
  */
 
 :root {
+  --main-strong-blue: #08121e;
+  --main-strong-red: #882d24;
   --blue: #3490dc;
   --indigo: #6574cd;
   --purple: #9561e2;
@@ -46,10 +48,77 @@
 }
 
 html {
+  background-color: var(--light);
+  color: var(--main-strong-blue);
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+#nav-menu {
+    position: fixed;
+    padding-left: 0;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 80px;
+    z-index: 10;
+    background-image: -webkit-linear-gradient(var(--main-strong-red), var(--light));
+}
+
+#nav-text {
+    padding-top: 5px;
+    color: var(--main-strong-blue);
+    font-size: 25px;
+}
+
+#logo-nav {
+    padding-right: 20px;
+    alignment: left;
+}
+
+#logo-img {
+    width: 20%;
+    height: auto;
+    padding: 1%;
+    position: absolute;
+    left: 0px;
+}
+
+#form {
+    height: 100vh;
+    padding: 50px;
+    padding-top: 150px ;
+    color: var(--main-strong-blue);
+
+}
+
+.mybutton{
+    background-color: var(--main-strong-red);
+    border-radius: 50px;
+    padding: 5px 20px;
+    border: 5px;
+    color: var(--light);
+    text-decoration: none;
+}
+
+.input-form{
+    padding: 2px;
+}
+
+#result-table{
+    color: var(--light);
+    width: 70vw;
+    height: 40vh;
+    border-radius: 50px;
+    padding: 30px;
+    justify-content: center;
+}
+
+
+#form-table{
+    padding: 30px;
 }
 
 article,
